# dbt-datahub-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  governance.yml.example  ingest_config.yml  pyproject.toml
examples/: sample_manifest.json
src/dbt_datahub_governance/: __init__.py  __main__.py  cli.py  constants.py  dashboard.py  exceptions.py  py.typed
src/dbt_datahub_governance/config/: __init__.py  loader.py
src/dbt_datahub_governance/datahub/: __init__.py  client.py  urn_mapper.py
src/dbt_datahub_governance/models/: __init__.py  dbt_models.py  governance.py
src/dbt_datahub_governance/parsers/: __init__.py  manifest.py
src/dbt_datahub_governance/reporters/: __init__.py  base.py  console.py  github.py  json_reporter.py  markdown.py
src/dbt_datahub_governance/rules/: __init__.py  base.py  builtin.py  engine.py
tests/: conftest.py  test_cli.py  test_config.py  test_datahub.py  test_parsers.py  test_reporters.py  test_rules.py
