[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbt-datahub-cli"
version = "0.1.0"
description = "CLI tool that enforces data governance by validating dbt models against DataHub metadata"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "dbt-datahub-cli contributors"}
]
keywords = ["dbt", "datahub", "governance", "data-quality", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "acryl-datahub>=0.12.0",
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "responses>=0.23.0",
]
dashboard = [
    "streamlit>=1.30.0",
]
all = [
    "dbt-datahub-cli[dev,dashboard]",
]

[project.scripts]
dbt-datahub-cli = "dbt_datahub_governance.cli:main"

[project.urls]
Homepage = "https://github.com/karan0207/dbt-datahub-cli"
Documentation = "https://github.com/karan0207/dbt-datahub-cli#readme"
Repository = "https://github.com/karan0207/dbt-datahub-cli"
Issues = "https://github.com/karan0207/dbt-datahub-cli/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src/dbt_datahub_governance --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
